clusters/production/utilities/ps/ps-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ps
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ps
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: ps
        image: warrenrees/property-search:latest
        imagePullPolicy: IfNotPresent
        #ports:
        #- containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      imagePullSecrets:
      - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: ps
  namespace: utilities
  labels:
    app: ps
spec:
  selector:
    app: ps
  ports:
  - name: ps
    port: 8000
    targetPort: 8000
  type: ClusterIP
