clusters/production/utilities/ps/ps-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ps
  namespace: default
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - ps.rees.ca
  rules:
  - timeouts:
      request: 3600s
      backendRequest: 3600s
    backendRefs:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: identity
      port: 9000
